Requirements semi-met:bids,single,timers 'n bugs;)

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -66,13 +66,26 @@
   font-size: 18px;
 }
 
-.toolbar {
+.toolbarLinks {
   display: flex;
   gap: 50px;
   justify-content: center;
 }
 
-.toolbar a {
+.toolbarLinks a {
+  text-decoration: none;
+  border: 1px solid gray;
+  border-radius: 5px;
+  padding: 10px;
+  color: black;
+  background-color: mediumseagreen;
+}
+
+.auctionPage {
+  margin-top: 40px;
+}
+
+.auctionPage a {
   text-decoration: none;
   border: 1px solid gray;
   border-radius: 5px;
@@ -101,5 +114,109 @@
   background-color: white;
   border-radius: 25px;
   padding: 15px;
-  cursor: pointer;
+  height: 350px;
+  width: 350px;
+}
+
+.auctionItem img {
+  height: 125px;
+  width: 125px;
+}
+
+.addItemPage {
+  background-color: rgb(148, 105, 89);
+  padding: 100px;
+  border-radius: 100px;
+  margin: 25px 45px;
+}
+
+.addItemPage h1 {
+  color: red;
+  text-align: center;
+  font-size: 70px;
+}
+
+.addItemForm {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  margin: 25px 45px;
+  align-items: center;
+  background-color: rgb(148, 105, 89);
+  padding: 100px;
+  border-radius: 100px;
+}
+
+.addItemForm input,
+.addItemForm button {
+  width: 50%;
+  padding: 10px;
+  font-size: 18px;
+  border-radius: 15px;
+}
+
+.invalid {
+  border: 5px solid red;
+}
+
+.singlePage .auctionItemSingle {
+  background-color: white;
+  border-radius: 25px;
+  padding: 15px;
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.auctionItemSingle img {
+  width: 250px;
+  height: 250px;
+}
+
+.singlePage a {
+  display: none;
+}
+
+.singlePage {
+  padding: 50px;
+  background-color: cornsilk;
+  display: flex;
+}
+
+.otherSide {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 70%;
+}
+
+.otherSide button,
+.otherSide input {
+  width: 20%;
+  padding: 18px;
+  font-size: 20px;
+  text-align: center;
+}
+
+.bets {
+  background-color: wheat;
+  border-radius: 25px;
+  padding: 15px;
+  margin: 0;
+}
+
+.betsBox {
+  margin-top: 15px;
+  display: flex;
+  flex-direction: column-reverse;
+  gap: 15px;
+}
+
+.winner {
+  background-color: mediumseagreen;
+  padding: 25px;
+  border-radius: 25px;
 }
